--- a/StageEditor/StageEditor.vcxproj
+++ b/StageEditor/StageEditor.vcxproj
@@ -147,6 +147,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Console\ConsoleMessage.hpp" />
+    <ClInclude Include="FileFunc.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\ActorEditorBase.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\GroundEditor.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\PlayerEditor.hpp" />
@@ -162,9 +163,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Console\ConsoleMessage.cpp" />
+    <ClCompile Include="FileFunc.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\ActorEditorBase.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\GroundEditor.cpp" />
+    <ClCompile Include="SceneEditor\ActorEditor\PlayerEditor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\PosInfo\PosInfo.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\PosInfo\PosInfoUtility.cpp" />
     <ClCompile Include="SceneEditor\SceneEditor.cpp" />
