PrintJson追加、後で消す

--- a/StageEditor/StageEditor.vcxproj
+++ b/StageEditor/StageEditor.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="StageEditor.hpp" />
     <ClInclude Include="StageInfo.hpp" />
     <ClInclude Include="StartActor.hpp" />
+    <ClInclude Include="TestJson.hpp" />
     <ClInclude Include="Utility\Camera.hpp" />
     <ClInclude Include="Utility\ClickManager.hpp" />
     <ClInclude Include="Utility\Cursor.hpp" />
