--- a/GameDev/GameDev.vcxproj.filters
+++ b/GameDev/GameDev.vcxproj.filters
@@ -3,4 +3,7 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="StartActor.hpp" />
+  </ItemGroup>
 </Project>
