--- a/StageEditorDev/StageEditorDev.vcxproj
+++ b/StageEditorDev/StageEditorDev.vcxproj
@@ -147,12 +147,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ConsoleMessage\ConsoleMessage.hpp" />
+    <ClInclude Include="SceneEditor\SceneEditor.hpp" />
     <ClInclude Include="StartActor.hpp" />
     <ClInclude Include="StageEditor.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ConsoleMessage\ConsoleMessage.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="SceneEditor\SceneEditor.cpp" />
     <ClCompile Include="StageEditor.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
