--- a/StageEditorDev/StageEditorDev.vcxproj.filters
+++ b/StageEditorDev/StageEditorDev.vcxproj.filters
@@ -4,10 +4,12 @@
     <ClInclude Include="StageEditor.hpp" />
     <ClInclude Include="ConsoleMessage\ConsoleMessage.hpp" />
     <ClInclude Include="StartActor.hpp" />
+    <ClInclude Include="SceneEditor\SceneEditor.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ConsoleMessage\ConsoleMessage.cpp" />
     <ClCompile Include="StageEditor.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="SceneEditor\SceneEditor.cpp" />
   </ItemGroup>
 </Project>
