--- a/StageEditorDev/StageEditorDev.vcxproj.filters
+++ b/StageEditorDev/StageEditorDev.vcxproj.filters
@@ -5,12 +5,17 @@
     <ClInclude Include="ConsoleMessage\ConsoleMessage.hpp" />
     <ClInclude Include="StartActor.hpp" />
     <ClInclude Include="SceneEditor\SceneEditor.hpp" />
-    <ClInclude Include="Data\Data.hpp" />
+    <ClInclude Include="SceneEditor\ActorEditor\ActorEditorBase.hpp" />
+    <ClInclude Include="SceneEditor\ActorEditor\Data\Data.hpp" />
+    <ClInclude Include="SceneEditor\BeginPolicy.hpp" />
+    <ClInclude Include="SceneEditor\ActorEditor\ActorData.hpp" />
+    <ClInclude Include="SaveStage.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ConsoleMessage\ConsoleMessage.cpp" />
     <ClCompile Include="StageEditor.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="SceneEditor\SceneEditor.cpp" />
+    <ClCompile Include="SceneEditor\ActorEditor\ActorEditorBase.cpp" />
   </ItemGroup>
 </Project>
