--- a/StageEditorDev/StageEditorDev.vcxproj.filters
+++ b/StageEditorDev/StageEditorDev.vcxproj.filters
@@ -10,6 +10,8 @@
     <ClInclude Include="SceneEditor\BeginPolicy.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\ActorData.hpp" />
     <ClInclude Include="SaveFunc.hpp" />
+    <ClInclude Include="SceneEditor\CreateActorEditor.hpp" />
+    <ClInclude Include="LoadFunc.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ConsoleMessage\ConsoleMessage.cpp" />
@@ -18,5 +20,7 @@
     <ClCompile Include="SceneEditor\SceneEditor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\ActorEditorBase.cpp" />
     <ClCompile Include="SaveFunc.cpp" />
+    <ClCompile Include="SceneEditor\CreateActorEditor.cpp" />
+    <ClCompile Include="LoadFunc.cpp" />
   </ItemGroup>
 </Project>
