--- a/StageEditorDev/StageEditorDev.vcxproj.filters
+++ b/StageEditorDev/StageEditorDev.vcxproj.filters
@@ -12,6 +12,8 @@
     <ClInclude Include="SaveFunc.hpp" />
     <ClInclude Include="SceneEditor\CreateActorEditor.hpp" />
     <ClInclude Include="LoadFunc.hpp" />
+    <ClInclude Include="SceneEditor\ActorEditor\PlayerEditor.hpp" />
+    <ClInclude Include="Cursor\Cursor.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ConsoleMessage\ConsoleMessage.cpp" />
@@ -22,5 +24,6 @@
     <ClCompile Include="SaveFunc.cpp" />
     <ClCompile Include="SceneEditor\CreateActorEditor.cpp" />
     <ClCompile Include="LoadFunc.cpp" />
+    <ClCompile Include="Cursor\Cursor.cpp" />
   </ItemGroup>
 </Project>
