--- a/StageEditorDev/StageEditorDev.vcxproj.filters
+++ b/StageEditorDev/StageEditorDev.vcxproj.filters
@@ -14,6 +14,7 @@
     <ClInclude Include="LoadFunc.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\PlayerEditor.hpp" />
     <ClInclude Include="Cursor\Cursor.hpp" />
+    <ClInclude Include="SceneEditor\ActorEditor\Data\PosData.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ConsoleMessage\ConsoleMessage.cpp" />
@@ -25,5 +26,7 @@
     <ClCompile Include="SceneEditor\CreateActorEditor.cpp" />
     <ClCompile Include="LoadFunc.cpp" />
     <ClCompile Include="Cursor\Cursor.cpp" />
+    <ClCompile Include="SceneEditor\ActorEditor\PlayerEditor.cpp" />
+    <ClCompile Include="SceneEditor\ActorEditor\Data\PosData.cpp" />
   </ItemGroup>
 </Project>
