--- a/StageEditorDev/StageEditorDev.vcxproj.filters
+++ b/StageEditorDev/StageEditorDev.vcxproj.filters
@@ -30,5 +30,6 @@
     <ClCompile Include="SceneEditor\ActorEditor\PlayerEditor.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\Data\PosData.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\GroundEditor.cpp" />
+    <ClCompile Include="StartActor.cpp" />
   </ItemGroup>
 </Project>
