--- a/StageEditorDev/StageEditorDev.vcxproj
+++ b/StageEditorDev/StageEditorDev.vcxproj
@@ -146,6 +146,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Camera\EditorCamera.hpp" />
     <ClInclude Include="ConsoleMessage\ConsoleMessage.hpp" />
     <ClInclude Include="Cursor\Cursor.hpp" />
     <ClInclude Include="LoadFunc.hpp" />
@@ -165,6 +166,7 @@
     <ClInclude Include="StageEditor.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Camera\EditorCamera.cpp" />
     <ClCompile Include="ConsoleMessage\ConsoleMessage.cpp" />
     <ClCompile Include="Cursor\Cursor.cpp" />
     <ClCompile Include="LoadFunc.cpp" />
