--- a/StageEditorDev/StageEditorDev.vcxproj.filters
+++ b/StageEditorDev/StageEditorDev.vcxproj.filters
@@ -20,6 +20,7 @@
     <ClInclude Include="SceneEditor\ActorEditor\CameraEditor.hpp" />
     <ClInclude Include="Camera\EditorCamera.hpp" />
     <ClInclude Include="SceneEditor\ActorEditor\TogeEditor.hpp" />
+    <ClInclude Include="SceneEditor\ActorEditor\TripleEditor.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ConsoleMessage\ConsoleMessage.cpp" />
@@ -39,5 +40,6 @@
     <ClCompile Include="SceneEditor\ActorEditor\CameraEditor.cpp" />
     <ClCompile Include="Camera\EditorCamera.cpp" />
     <ClCompile Include="SceneEditor\ActorEditor\TogeEditor.cpp" />
+    <ClCompile Include="SceneEditor\ActorEditor\TripleEditor.cpp" />
   </ItemGroup>
 </Project>
